--- a/boot.css
+++ b/boot.css
@@ -17,6 +17,12 @@ color: grey;
 
 }
 
+.col-sm-3,
+.col-sm-4,
+.col-sm-6,
+.col-sm-9
+
+
 .board {
     float: left;
     background-color: #edeff0;
